IGDD-2104 - CI/CD Updates (#114)
* Update pom.xml to add reporting and update to Java 21.

Update GitHub Action (maven.yml) for Java 21 and the start to publishing site.

* Update maven.yml to include Site Publish steps.

* Update pom.xml to bump version of izgw-core to 3.0.0-izgw-core-SNAPSHOT which is the Java 21 version.

---------

Co-authored-by: Austin Moody <austinmoody@protonmail.com>